--- a/app/presenters/templates/Sign/register.latte
+++ b/app/presenters/templates/Sign/register.latte
@@ -5,9 +5,8 @@
             <div class="col-sm-3"></div>
             <div class="col-sm-6">
                 <h3>Database Applications</h3>
-                <h1 n:block=title>Sign in</h1>
-                {control signInForm}
-                <p class="notice">No account yet? You can create one <a href="{link Sign:register}">here</a>.</p>
+                <h1 n:block=title>Create a new account</h1>
+                {control registerForm}
             </div>
             <div class="col-sm-3"></div>
         </div>
