--- a/assets/scss/_style.scss
+++ b/assets/scss/_style.scss
@@ -32,3 +32,11 @@ ul.error {
   background: #f2dede;
   border-left: 3px solid #a94442;
 }
+
+#navbar {
+  margin-top: 20px
+}
+
+.section-title {
+  margin-top: 40px;
+}
