--- a/app/presenters/templates/@layout.latte
+++ b/app/presenters/templates/@layout.latte
@@ -11,6 +11,41 @@
 </head>
 
 <body>
+
+{if $user->isLoggedIn()}
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12">
+            <nav class="navbar navbar-inverse" id="navbar">
+                <div class="container-fluid">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                                data-target="#bs-example-navbar-collapse-2">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand" href="{link Homepage:default}">NDBI026</a>
+                    </div>
+
+                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
+                        <ul class="nav navbar-nav">
+                            <li class="active"><a href="{link Homepage:default}"><i class="glyphicon glyphicon-dashboard"></i> Dashboard</a></li>
+                        </ul>
+
+                        <ul class="nav navbar-nav navbar-right">
+                            <li><a href="{link Sign:out}"><i class="glyphicon glyphicon-log-out"></i> Logout</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </div>
+    </div>
+</div>
+{/if}
+
+{if count($flashes) > 0}
 <div class="container" id="flashes">
     <div class="row">
         <div class="col-lg-12">
@@ -24,6 +59,7 @@
         </div>
     </div>
 </div>
+{/if}
 
 {include content}
 
