--- a/app/presenters/templates/Homepage/default.latte
+++ b/app/presenters/templates/Homepage/default.latte
@@ -1,25 +1,47 @@
+{block title}Dashboard{/block}
 {block content}
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <div class="alert alert-warning"><strong>It seems you haven't joined a course yet!</strong> Pick yours bellow:</div>
-                <table class="table">
-                    <tr>
-                        <th>#</th>
-                        <th>Course name</th>
-                        <th></th>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>
-                            2015 NDBI026 Thursday 10:40
-                        </td>
-                        <td>
-                            <a href="" class="btn btn-success btn-sm">Join</a>
-                        </td>
-                    </tr>
-                </table>
+                {if count($projects) == 0}
+                    <div class="alert alert-warning"><strong>It seems you haven't yet created a project!</strong> Create
+                        one below:
+                    </div>
+                {elseif $accepted == 0 && $awaiting > 0}
+                    <div class="alert alert-info">
+                        Your project topic is being reviewed by the teacher, please be
+                        patient.
+                    </div>
+                {/if}
+
+                {if $awaiting == 0 && $accepted == 0 && $declined > 0}
+                    <div class="alert alert-info">
+                        <strong>Your topic has been declined by the teacher :( </strong>. Please submit another one:
+                    </div>
+                {/if}
             </div>
         </div>
+
+        {if $accepted == 0 && $awaiting == 0}
+            <div class="row">
+                <div class="col-sm-3"></div>
+                <div class="col-sm-6">
+                    <h1>Create a new project</h1>
+                    {control projectForm}
+                </div>
+                <div class="col-sm-3"></div>
+            </div>
+        {/if}
+
+        {if $accepted > 0}
+            <div class="row">
+                <div class="col-md-6">
+                    <h1>{$project->name}</h1>
+                </div>
+                <div class="col-md-6">
+                    <h4 class="section-title">Comments</h4>
+                </div>
+            </div>
+        {/if}
     </div>
 {/block}
