--- a/app/presenters/templates/@layout.latte
+++ b/app/presenters/templates/@layout.latte
@@ -16,7 +16,7 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-12">
-            <nav class="navbar navbar-inverse" id="navbar">
+            <nav class="navbar navbar-default" id="navbar">
                 <div class="container-fluid">
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
@@ -46,11 +46,11 @@
 {/if}
 
 {if count($flashes) > 0}
-<div class="container" id="flashes">
+<div class="container">
     <div class="row">
         <div class="col-lg-12">
             {foreach $flashes as $flash}
-                <div class="alert alert-{$flash->type} alert-dismissible fade in" role="alert">
+                <div class="flash alert alert-{$flash->type} alert-dismissible fade in" role="alert">
                     <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
                                 aria-hidden="true">×</span></button>
                     {$flash->message}
