--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,5 +1,7 @@
 @import "bootstrap";
 @import "bootstrap_theme";
+@import "datatables";
+@import "datatables.bootstrap";
 
 @import "variables";
 @import "style";
