--- a/app/presenters/templates/Homepage/default.latte
+++ b/app/presenters/templates/Homepage/default.latte
@@ -1,6 +1,7 @@
 {block title}Dashboard{/block}
 {block content}
     <div class="container">
+        {if !isset($admin)}
         <div class="row">
             <div class="col-lg-12">
                 {if count($projects) == 0}
@@ -21,7 +22,9 @@
                 {/if}
             </div>
         </div>
+        {/if}
 
+        {if !isset($admin)}
         {if $accepted == 0 && $awaiting == 0}
             <div class="row">
                 <div class="col-sm-3"></div>
@@ -32,8 +35,9 @@
                 <div class="col-sm-3"></div>
             </div>
         {/if}
+        {/if}
 
-        {if $accepted > 0}
+        {if isset($admin) || $accepted > 0}
             <div class="row">
                 <div class="col-lg-12"><h1>{$project->name}</h1></div>
                 <div class="col-md-8">
@@ -89,7 +93,7 @@
                                     <h4>{$u->name ? $u->name : $u->username} <small>{$c->posted|date:'j.n.Y H:i'}</small></h4>
                                 </div>
                                 <div class="comment-body">
-                                    {$c->text|noescape}
+                                    {$parsedown->parse($c->text)|noescape}
                                 </div>
                             </div>
                             <div class="panel-footer comment-responses">
