--- a/app/presenters/templates/Homepage/default.latte
+++ b/app/presenters/templates/Homepage/default.latte
@@ -40,10 +40,11 @@
         {if isset($admin) || $accepted > 0}
             <div class="row">
                 <div class="col-lg-12"><h1>{$project->name}</h1></div>
-                <div class="col-md-8">
+                <div class="col-md-6">
                     <h3>Project description:</h3>
                     {$desc|noescape}
-
+</div>
+                <div class="col-md-6">
                     <h3 class="section-title">Solutions</h3>
                     {if count($solutions) == 0}
                         <p>You haven't submitted any solutions yet.</p>
@@ -65,7 +66,6 @@
                             {/foreach}
                         </table>
                     {/if}
-
                     <div class="row">
                         <div class="col-xs-8">
                             <h3 class="section-title" style="margin-bottom: 40px;">Upload a solution</h3>
@@ -74,7 +74,10 @@
                         <div class="col-xs-4"></div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                </div>
+                <div class="row" style="margin-top: 40px">
+                <div class="col-md-3"></div>
+                <div class="col-md-6">
                     <h3>Comments</h3>
                     <div class="panel panel-default">
                         <div class="panel-body">
@@ -111,6 +114,8 @@
                         {/foreach}
                     </div>
                 </div>
+                <div class="col-md-3"></div>
+               </div>
             </div>
         {/if}
     </div>
