--- a/app/presenters/templates/Admin/students.latte
+++ b/app/presenters/templates/Admin/students.latte
@@ -4,46 +4,43 @@
             <div class="col-lg-12">
                 <div class="panel panel-primary">
                     <div class="panel-heading">
-                        <h3 class="panel-title">All projects</h3>
+                        <h3 class="panel-title">Students</h3>
                     </div>
                     <div class="panel-body">
                         <table class="table datatables table-striped">
                             <thead>
                             <tr>
-                                <th>Created</th>
+                                <th>#</th>
+                                <th>Username</th>
+                                <th>Name</th>
+                                <th>Email</th>
                                 <th>Project</th>
-                                <th>Student</th>
-                                <th>Status</th>
+                                <th></th>
                             </tr>
                             </thead>
 
                             <tfoot>
                             <tr>
-                                <th>Created</th>
+                                <th>#</th>
+                                <th>Username</th>
+                                <th>Name</th>
+                                <th>Email</th>
                                 <th>Project</th>
-                                <th>Student</th>
-                                <th>Status</th>
+                                <th></th>
                             </tr>
                             </tfoot>
 
                             <tbody>
-                            {foreach $projects as $p}
-                                {var $u = $p->ref('users')}
+                            {foreach $students as $s}
+                                {var $p = $s->related('projects')->order('accepted DESC')->fetch()}
                                 <tr>
-                                    <td>{$p->created|date:'j.n.Y H:i'}</td>
+                                    <td>{$s->id}</td>
+                                    <td>{$s->username}</td>
+                                    <td>{$s->name}</td>
+                                    <td><a href="mailtp:{$s->email}">{$s->email}</a></td>
                                     <td><a href="{link Admin:project $p->id}">{$p->name}</a></td>
-                                    <td>{$u->name ? $u->name : $u->username}{if $u->email} (
-                                            <a href="mailto:{$u->email}">{$u->email}</a>
-                                            ){/if}</td>
                                     <td>
-                                        {var $a = $p->accepted}
-                                        {if $a == 0}
-                                            Awating action
-                                        {elseif $a == 1}
-                                            Accepted
-                                        {elseif $a == 2}
-                                            Declined
-                                        {/if}
+                                        <a href="{link Admin:pwd $s->id}" class="btn btn-xs btn-warning"><i class="glyphicon glyphicon-refresh"></i> password reset</a>
                                     </td>
                                 </tr>
                             {/foreach}
