--- a/app/presenters/templates/Admin/students.latte
+++ b/app/presenters/templates/Admin/students.latte
@@ -14,21 +14,10 @@
                                 <th>Username</th>
                                 <th>Name</th>
                                 <th>Email</th>
-                                <th>Project</th>
+                                <th>Project(s)</th>
                                 <th></th>
                             </tr>
                             </thead>
-
-                            <tfoot>
-                            <tr>
-                                <th>#</th>
-                                <th>Username</th>
-                                <th>Name</th>
-                                <th>Email</th>
-                                <th>Project</th>
-                                <th></th>
-                            </tr>
-                            </tfoot>
 
                             <tbody>
                             {foreach $students as $s}
