--- a/app/presenters/templates/Homepage/default.latte
+++ b/app/presenters/templates/Homepage/default.latte
@@ -85,7 +85,17 @@
                 <div class="col-md-6">
                     <h3>Project description:</h3>
                     {$desc|noescape}
-</div>
+
+                    {var $tags = $project->related('projects_tags')}
+                    {if $tags->count() > 0}
+                    <h4>Tags</h4>
+                    <p>
+                        {foreach $tags as $tag}
+                            <span class="label label-default">{$tag->ref('tags')->tag}</span>
+                        {/foreach}
+                    </p>
+                    {/if}
+                </div>
                 <div class="col-md-6">
                     <h3 class="section-title">Solutions</h3>
                     {if count($solutions) == 0}
