--- a/app/presenters/templates/Homepage/default.latte
+++ b/app/presenters/templates/Homepage/default.latte
@@ -19,14 +19,16 @@
 
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
                         <ul class="nav navbar-nav">
-                            {if $project->accepted == 1}
-                                <li><a href="{link seenAll!}"><i class="glyphicon glyphicon-check"></i> Mark all as resolved</a></li>
-                            {elseif $project->accepted == 0}
-                                <li><a href="{link accept! $project->id}" onclick="return confirm('Are you sure?')"><i class="glyphicon glyphicon-ok"></i> Accept</a></li>
-                                <li><a href="{link decline! $project->id}" onclick="return confirm('Are you sure?')"><i class="glyphicon glyphicon-remove"></i> Decline</a></li>
-                            {/if}
                             {if $project->completed == 0}
-                                <li><a href="{link complete!}">Mark as completed</a></li>
+                                {if $project->accepted == 1}
+                                    <li><a href="{link seenAll!}"><i class="glyphicon glyphicon-check"></i> Mark all as resolved</a></li>
+                                {elseif $project->accepted == 0}
+                                    <li><a href="{link accept! $project->id}" onclick="return confirm('Are you sure?')"><i class="glyphicon glyphicon-ok"></i> Accept</a></li>
+                                    <li><a href="{link decline! $project->id}" onclick="return confirm('Are you sure?')"><i class="glyphicon glyphicon-remove"></i> Decline</a></li>
+                                {/if}
+                            {/if}
+                            {if $project->accepted == 1 && $project->completed == 0}
+                                <li><a href="{link complete!}"><i class="glyphicon glyphicon-ok"></i> Mark project as completed</a></li>
                             {/if}
                         </ul>
                     </div>
